--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -17,10 +17,10 @@
         app:layout_constraintVertical_bias="0.24000001" />
 
     <Button
-        android:id="@+id/button_first_fragment"
+        android:id="@+id/button_third_fragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/button_first_fragment"
+        android:text="@string/third_screen"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.128"
@@ -47,7 +47,7 @@
         android:layout_marginStart="68dp"
         android:layout_marginBottom="20dp"
         android:text="@string/load_users_list"
-        app:layout_constraintBottom_toTopOf="@+id/button_first_fragment"
+        app:layout_constraintBottom_toTopOf="@+id/button_third_fragment"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
@@ -56,7 +56,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
         android:text="@string/clear"
-        app:layout_constraintBottom_toTopOf="@+id/button_first_fragment"
+        app:layout_constraintBottom_toTopOf="@+id/button_third_fragment"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.597"
         app:layout_constraintStart_toEndOf="@+id/load_users_button" />
@@ -69,6 +69,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.59"
-        app:layout_constraintStart_toEndOf="@+id/button_first_fragment"
+        app:layout_constraintStart_toEndOf="@+id/button_third_fragment"
         app:layout_constraintTop_toBottomOf="@+id/clear_button" />
 </androidx.constraintlayout.widget.ConstraintLayout>
